--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -94,7 +94,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 164
         },
-        "outputId": "ca40cf9e-6170-4844-f915-016fef5a13f9"
+        "outputId": "87280140-5e72-4087-829d-79d21c5f6623"
       },
       "source": [
         "import sys\n",
@@ -103,13 +103,13 @@
         "\n",
         "download_week2_resources()"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c2fd5bf47852433b858a39d020e43215",
+              "model_id": "1ed16caba80b42cca8e2b501830c2b7e",
               "version_minor": 0,
               "version_major": 2
             },
@@ -132,7 +132,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "fe4ba8c33f5c4dbe97b22c1d6ef839a4",
+              "model_id": "000e535c3977497290a13490b43cf617",
               "version_minor": 0,
               "version_major": 2
             },
@@ -155,7 +155,7 @@
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "1901682be6e647c5babc1beb1c912ae2",
+              "model_id": "d3bfd35abad04814a6658d56a2c2db78",
               "version_minor": 0,
               "version_major": 2
             },
@@ -185,28 +185,28 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "715a8293-4356-4cc9-840d-d596cb68800f"
+        "outputId": "fda59b1e-8ed3-43ee-cfc3-c1b7db1fbd51"
       },
       "source": [
         "! wget https://raw.githubusercontent.com/hse-aml/natural-language-processing/master/setup_google_colab.py -O setup_google_colab.py\n",
         "import setup_google_colab\n",
         "setup_google_colab.setup_week2()  # change to the week you're working on"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2019-08-02 12:20:40--  https://raw.githubusercontent.com/hse-aml/natural-language-processing/master/setup_google_colab.py\n",
+            "--2019-08-02 16:58:38--  https://raw.githubusercontent.com/hse-aml/natural-language-processing/master/setup_google_colab.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 151.101.0.133, 151.101.64.133, 151.101.128.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|151.101.0.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 2330 (2.3K) [text/plain]\n",
             "Saving to: ‘setup_google_colab.py’\n",
             "\n",
-            "setup_google_colab. 100%[===================>]   2.28K  --.-KB/s    in 0s      \n",
+            "\rsetup_google_colab.   0%[                    ]       0  --.-KB/s               \rsetup_google_colab. 100%[===================>]   2.28K  --.-KB/s    in 0s      \n",
             "\n",
-            "2019-08-02 12:20:45 (29.0 MB/s) - ‘setup_google_colab.py’ saved [2330/2330]\n",
+            "2019-08-02 16:58:38 (35.0 MB/s) - ‘setup_google_colab.py’ saved [2330/2330]\n",
             "\n"
           ],
           "name": "stdout"
@@ -257,7 +257,10 @@
         "            ######################################\n",
         "            ######### YOUR CODE HERE #############\n",
         "            ######################################\n",
-        "            \n",
+        "            if token.startswith('@'):\n",
+        "              token = '<USR>'\n",
+        "            elif token.lower().startswith('http://') or token.lower().startswith('https://'):\n",
+        "              token = '<URL>'\n",
         "            tweet_tokens.append(token)\n",
         "            tweet_tags.append(tag)\n",
         "            \n",
@@ -309,7 +312,11 @@
       "metadata": {
         "id": "ki3tK4GwQLet",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "d0c28882-3ff6-47af-a2ed-7f7efca0e868"
       },
       "source": [
         "for i in range(3):\n",
@@ -317,8 +324,79 @@
         "        print('%s\\t%s' % (token, tag))\n",
         "    print()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "RT\tO\n",
+            "<USR>\tO\n",
+            ":\tO\n",
+            "Online\tO\n",
+            "ticket\tO\n",
+            "sales\tO\n",
+            "for\tO\n",
+            "Ghostland\tB-musicartist\n",
+            "Observatory\tI-musicartist\n",
+            "extended\tO\n",
+            "until\tO\n",
+            "6\tO\n",
+            "PM\tO\n",
+            "EST\tO\n",
+            "due\tO\n",
+            "to\tO\n",
+            "high\tO\n",
+            "demand\tO\n",
+            ".\tO\n",
+            "Get\tO\n",
+            "them\tO\n",
+            "before\tO\n",
+            "they\tO\n",
+            "sell\tO\n",
+            "out\tO\n",
+            "...\tO\n",
+            "\n",
+            "Apple\tB-product\n",
+            "MacBook\tI-product\n",
+            "Pro\tI-product\n",
+            "A1278\tI-product\n",
+            "13.3\tI-product\n",
+            "\"\tI-product\n",
+            "Laptop\tI-product\n",
+            "-\tI-product\n",
+            "MD101LL/A\tI-product\n",
+            "(\tO\n",
+            "June\tO\n",
+            ",\tO\n",
+            "2012\tO\n",
+            ")\tO\n",
+            "-\tO\n",
+            "Full\tO\n",
+            "read\tO\n",
+            "by\tO\n",
+            "eBay\tB-company\n",
+            "<URL>\tO\n",
+            "<URL>\tO\n",
+            "\n",
+            "Happy\tO\n",
+            "Birthday\tO\n",
+            "<USR>\tO\n",
+            "!\tO\n",
+            "May\tO\n",
+            "Allah\tB-person\n",
+            "s.w.t\tO\n",
+            "bless\tO\n",
+            "you\tO\n",
+            "with\tO\n",
+            "goodness\tO\n",
+            "and\tO\n",
+            "happiness\tO\n",
+            ".\tO\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
