--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -1475,10 +1475,14 @@
       "metadata": {
         "id": "OHVJJkmSmkrs",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 816
+        },
+        "outputId": "ebe295eb-623c-40b5-8b8b-78eeee70cb62"
       },
       "source": [
-        "# Experiment with different values\n",
+        "# Experiment with different lr values\n",
         "\n",
         "tf.reset_default_graph()\n",
         "\n",
@@ -1487,7 +1491,7 @@
         "\n",
         "batch_size = 32######### YOUR CODE HERE #############\n",
         "n_epochs = 4######### YOUR CODE HERE #############\n",
-        "learning_rate = 0.005######### YOUR CODE HERE #############\n",
+        "learning_rate = 0.010######### YOUR CODE HERE #############\n",
         "learning_rate_decay = np.sqrt(2)######### YOUR CODE HERE #############\n",
         "dropout_keep_probability = 0.7 # 0.1, 0.5, 0.9######### YOUR CODE HERE #############\n",
         "\n",
@@ -1512,8 +1516,165 @@
         "    \n",
         "print('...training finished.')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Start training... \n",
+            "\n",
+            "-------------------- Epoch 1 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 71095 phrases; correct: 133.\n",
+            "\n",
+            "precision:  0.19%; recall:  2.96%; F1:  0.35\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 8589 phrases; correct: 19.\n",
+            "\n",
+            "precision:  0.22%; recall:  3.54%; F1:  0.42\n",
+            "\n",
+            "-------------------- Epoch 2 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 3715 phrases; correct: 1595.\n",
+            "\n",
+            "precision:  42.93%; recall:  35.53%; F1:  38.88\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 299 phrases; correct: 134.\n",
+            "\n",
+            "precision:  44.82%; recall:  24.95%; F1:  32.06\n",
+            "\n",
+            "-------------------- Epoch 3 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 4535 phrases; correct: 3405.\n",
+            "\n",
+            "precision:  75.08%; recall:  75.85%; F1:  75.47\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 338 phrases; correct: 183.\n",
+            "\n",
+            "precision:  54.14%; recall:  34.08%; F1:  41.83\n",
+            "\n",
+            "-------------------- Epoch 4 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 4634 phrases; correct: 4110.\n",
+            "\n",
+            "precision:  88.69%; recall:  91.56%; F1:  90.10\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 412 phrases; correct: 197.\n",
+            "\n",
+            "precision:  47.82%; recall:  36.69%; F1:  41.52\n",
+            "\n",
+            "...training finished.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "apY3k3q-oeKk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 816
+        },
+        "outputId": "1caa08c9-5446-4e2d-967c-ece8b3d25247"
+      },
+      "source": [
+        "# Experiment with different batch_size value\n",
+        "\n",
+        "tf.reset_default_graph()\n",
+        "\n",
+        "model = BiLSTMModel(len(token2idx), len(tag2idx), 200, 200, token2idx['<PAD>'])\n",
+        "######### YOUR CODE HERE #############\n",
+        "\n",
+        "batch_size = 64######### YOUR CODE HERE #############\n",
+        "n_epochs = 4######### YOUR CODE HERE #############\n",
+        "learning_rate = 0.010######### YOUR CODE HERE #############\n",
+        "learning_rate_decay = np.sqrt(2)######### YOUR CODE HERE #############\n",
+        "dropout_keep_probability = 0.7 # 0.1, 0.5, 0.9######### YOUR CODE HERE #############\n",
+        "\n",
+        "sess = tf.Session()\n",
+        "sess.run(tf.global_variables_initializer())\n",
+        "\n",
+        "print('Start training... \\n')\n",
+        "for epoch in range(n_epochs):\n",
+        "    # For each epoch evaluate the model on train and validation data\n",
+        "    print('-' * 20 + ' Epoch {} '.format(epoch+1) + 'of {} '.format(n_epochs) + '-' * 20)\n",
+        "    print('Train data evaluation:')\n",
+        "    eval_conll(model, sess, train_tokens, train_tags, short_report=True)\n",
+        "    print('Validation data evaluation:')\n",
+        "    eval_conll(model, sess, validation_tokens, validation_tags, short_report=True)\n",
+        "    \n",
+        "    # Train the model\n",
+        "    for x_batch, y_batch, lengths in batches_generator(batch_size, train_tokens, train_tags):\n",
+        "        model.train_on_batch(sess, x_batch, y_batch, lengths, learning_rate, dropout_keep_probability)\n",
+        "        \n",
+        "    # Decaying the learning rate\n",
+        "    learning_rate = learning_rate / learning_rate_decay\n",
+        "    \n",
+        "print('...training finished.')"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Start training... \n",
+            "\n",
+            "-------------------- Epoch 1 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 75751 phrases; correct: 182.\n",
+            "\n",
+            "precision:  0.24%; recall:  4.05%; F1:  0.45\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 9095 phrases; correct: 14.\n",
+            "\n",
+            "precision:  0.15%; recall:  2.61%; F1:  0.29\n",
+            "\n",
+            "-------------------- Epoch 2 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 3428 phrases; correct: 1363.\n",
+            "\n",
+            "precision:  39.76%; recall:  30.36%; F1:  34.43\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 258 phrases; correct: 115.\n",
+            "\n",
+            "precision:  44.57%; recall:  21.42%; F1:  28.93\n",
+            "\n",
+            "-------------------- Epoch 3 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 4762 phrases; correct: 3003.\n",
+            "\n",
+            "precision:  63.06%; recall:  66.90%; F1:  64.92\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 380 phrases; correct: 183.\n",
+            "\n",
+            "precision:  48.16%; recall:  34.08%; F1:  39.91\n",
+            "\n",
+            "-------------------- Epoch 4 of 4 --------------------\n",
+            "Train data evaluation:\n",
+            "processed 105778 tokens with 4489 phrases; found: 4670 phrases; correct: 3864.\n",
+            "\n",
+            "precision:  82.74%; recall:  86.08%; F1:  84.38\n",
+            "\n",
+            "Validation data evaluation:\n",
+            "processed 12836 tokens with 537 phrases; found: 411 phrases; correct: 196.\n",
+            "\n",
+            "precision:  47.69%; recall:  36.50%; F1:  41.35\n",
+            "\n",
+            "...training finished.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1532,20 +1693,106 @@
       "metadata": {
         "id": "nlfX7eTlQLix",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "650fd1a2-56ac-4623-df8c-ce60499a3b21"
       },
       "source": [
         "print('-' * 20 + ' Train set quality: ' + '-' * 20)\n",
         "train_results = eval_conll(model, sess, train_tokens, train_tags, short_report=False)\n",
         "\n",
         "print('-' * 20 + ' Validation set quality: ' + '-' * 20)\n",
-        "validation_results = ######### YOUR CODE HERE #############\n",
+        "validation_results = eval_conll(model, sess, validation_tokens, validation_tags, short_report=False) ######### YOUR CODE HERE #############\n",
         "\n",
         "print('-' * 20 + ' Test set quality: ' + '-' * 20)\n",
-        "test_results = ######### YOUR CODE HERE #############"
+        "test_results = eval_conll(model, sess, test_tokens, test_tags, short_report=False) ######### YOUR CODE HERE #############"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-------------------- Train set quality: --------------------\n",
+            "processed 105778 tokens with 4489 phrases; found: 4649 phrases; correct: 4219.\n",
+            "\n",
+            "precision:  90.75%; recall:  93.99%; F1:  92.34\n",
+            "\n",
+            "\t     company: precision:   92.59%; recall:   97.20%; F1:   94.84; predicted:   675\n",
+            "\n",
+            "\t    facility: precision:   92.31%; recall:   95.54%; F1:   93.90; predicted:   325\n",
+            "\n",
+            "\t     geo-loc: precision:   95.87%; recall:   97.79%; F1:   96.82; predicted:  1016\n",
+            "\n",
+            "\t       movie: precision:   16.67%; recall:   14.71%; F1:   15.62; predicted:    60\n",
+            "\n",
+            "\t musicartist: precision:   75.27%; recall:   91.81%; F1:   82.72; predicted:   283\n",
+            "\n",
+            "\t       other: precision:   91.90%; recall:   94.45%; F1:   93.16; predicted:   778\n",
+            "\n",
+            "\t      person: precision:   95.55%; recall:   96.95%; F1:   96.25; predicted:   899\n",
+            "\n",
+            "\t     product: precision:   87.88%; recall:   91.19%; F1:   89.51; predicted:   330\n",
+            "\n",
+            "\t  sportsteam: precision:   87.67%; recall:   91.71%; F1:   89.64; predicted:   227\n",
+            "\n",
+            "\t      tvshow: precision:   60.71%; recall:   58.62%; F1:   59.65; predicted:    56\n",
+            "\n",
+            "-------------------- Validation set quality: --------------------\n",
+            "processed 12836 tokens with 537 phrases; found: 460 phrases; correct: 199.\n",
+            "\n",
+            "precision:  43.26%; recall:  37.06%; F1:  39.92\n",
+            "\n",
+            "\t     company: precision:   60.82%; recall:   56.73%; F1:   58.71; predicted:    97\n",
+            "\n",
+            "\t    facility: precision:   39.39%; recall:   38.24%; F1:   38.81; predicted:    33\n",
+            "\n",
+            "\t     geo-loc: precision:   65.85%; recall:   47.79%; F1:   55.38; predicted:    82\n",
+            "\n",
+            "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    12\n",
+            "\n",
+            "\t musicartist: precision:   13.51%; recall:   17.86%; F1:   15.38; predicted:    37\n",
+            "\n",
+            "\t       other: precision:   37.50%; recall:   33.33%; F1:   35.29; predicted:    72\n",
+            "\n",
+            "\t      person: precision:   51.56%; recall:   29.46%; F1:   37.50; predicted:    64\n",
+            "\n",
+            "\t     product: precision:    8.33%; recall:    8.82%; F1:    8.57; predicted:    36\n",
+            "\n",
+            "\t  sportsteam: precision:   29.41%; recall:   25.00%; F1:   27.03; predicted:    17\n",
+            "\n",
+            "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    10\n",
+            "\n",
+            "-------------------- Test set quality: --------------------\n",
+            "processed 13258 tokens with 604 phrases; found: 522 phrases; correct: 243.\n",
+            "\n",
+            "precision:  46.55%; recall:  40.23%; F1:  43.16\n",
+            "\n",
+            "\t     company: precision:   50.70%; recall:   42.86%; F1:   46.45; predicted:    71\n",
+            "\n",
+            "\t    facility: precision:   50.00%; recall:   40.43%; F1:   44.71; predicted:    38\n",
+            "\n",
+            "\t     geo-loc: precision:   78.15%; recall:   56.36%; F1:   65.49; predicted:   119\n",
+            "\n",
+            "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     6\n",
+            "\n",
+            "\t musicartist: precision:    5.26%; recall:    7.41%; F1:    6.15; predicted:    38\n",
+            "\n",
+            "\t       other: precision:   31.45%; recall:   37.86%; F1:   34.36; predicted:   124\n",
+            "\n",
+            "\t      person: precision:   54.55%; recall:   40.38%; F1:   46.41; predicted:    77\n",
+            "\n",
+            "\t     product: precision:   16.67%; recall:   10.71%; F1:   13.04; predicted:    18\n",
+            "\n",
+            "\t  sportsteam: precision:   39.13%; recall:   29.03%; F1:   33.33; predicted:    23\n",
+            "\n",
+            "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     8\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
