--- a/week2/week2-NER.ipynb
+++ b/week2/week2-NER.ipynb
@@ -503,6 +503,66 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gSWdB3t5zq6k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "921e521a-b9ba-4a8d-c76b-f31513aa7a99"
+      },
+      "source": [
+        "len(token2idx)"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21966"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f5HwBVc3zvVY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "debc7b75-adff-4552-db27-4c9030235d2c"
+      },
+      "source": [
+        "len(tag2idx)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 72
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "HUvYx_xLQLfT",
