--- a/week3/week3-Embeddings.ipynb
+++ b/week3/week3-Embeddings.ipynb
@@ -1717,15 +1717,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 935
         },
-        "outputId": "6423f01e-a9c4-4c60-d330-859cbd3c9787"
+        "outputId": "25d28958-f647-40ff-950d-82cd21a00617"
       },
       "source": [
         "######### TRAINING HAPPENING HERE #############\n",
-        "!Starspace/starspace train -trainFile './data/tp_train.tsv' -model \"sodd\" -trainMode 3 \\\n",
+        "!Starspace/starspace train -trainFile './data/tp_train.tsv' -model \"mdl\" -trainMode 3 \\\n",
         "    -adagrad true -ngrams 1 -epoch 5 -dim 100 -minCount 2 -verbose true -fileFormat \"labelDoc\" \\\n",
         "    -negSearchLimit 10 -similarity \"cosine\" -lr 0.05"
       ],
-      "execution_count": 55,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -1768,22 +1768,22 @@
             "Initialized model weights. Model size :\n",
             "matrix : 95058 100\n",
             "Training epoch 0: 0.05 0.01\n",
-            "Epoch: 100.0%  lr: 0.040030  loss: 0.043743  eta: 0h12m  tot: 0h3m8s  (20.0%)\n",
-            " ---+++                Epoch    0 Train error : 0.04392122 +++--- ☃\n",
+            "Epoch: 100.0%  lr: 0.040040  loss: 0.044430  eta: 0h12m  tot: 0h3m9s  (20.0%)\n",
+            " ---+++                Epoch    0 Train error : 0.04419675 +++--- ☃\n",
             "Training epoch 1: 0.04 0.01\n",
-            "Epoch: 100.0%  lr: 0.030030  loss: 0.013229  eta: 0h8m  tot: 0h6m5s  (40.0%)\n",
-            " ---+++                Epoch    1 Train error : 0.01326838 +++--- ☃\n",
+            "Epoch: 100.0%  lr: 0.030000  loss: 0.013212  eta: 0h8m  tot: 0h6m5s  (40.0%)\n",
+            " ---+++                Epoch    1 Train error : 0.01327333 +++--- ☃\n",
             "Training epoch 2: 0.03 0.01\n",
-            "Epoch: 100.0%  lr: 0.020000  loss: 0.009376  eta: 0h5m  tot: 0h8m58s  (60.0%)\n",
-            " ---+++                Epoch    2 Train error : 0.00942904 +++--- ☃\n",
+            "Epoch: 100.0%  lr: 0.020000  loss: 0.009328  eta: 0h5m  tot: 0h8m57s  (60.0%)\n",
+            " ---+++                Epoch    2 Train error : 0.00945278 +++--- ☃\n",
             "Training epoch 3: 0.02 0.01\n",
-            "Epoch: 100.0%  lr: 0.010090  loss: 0.007773  eta: 0h2m  tot: 0h11m49s  (80.0%)\n",
-            " ---+++                Epoch    3 Train error : 0.00777525 +++--- ☃\n",
+            "Epoch: 100.0%  lr: 0.010000  loss: 0.007791  eta: 0h2m  tot: 0h11m48s  (80.0%)\n",
+            " ---+++                Epoch    3 Train error : 0.00770190 +++--- ☃\n",
             "Training epoch 4: 0.01 0.01\n",
-            "Epoch: 100.0%  lr: 0.000000  loss: 0.006896  eta: <1min   tot: 0h14m42s  (100.0%)\n",
-            " ---+++                Epoch    4 Train error : 0.00690628 +++--- ☃\n",
-            "Saving model to file : sodd\n",
-            "Saving model in tsv format : sodd.tsv\n"
+            "Epoch: 100.0%  lr: 0.000020  loss: 0.006860  eta: <1min   tot: 0h14m38s  (100.0%)\n",
+            " ---+++                Epoch    4 Train error : 0.00687535 +++--- ☃\n",
+            "Saving model to file : mdl\n",
+            "Saving model in tsv format : mdl.tsv\n"
           ],
           "name": "stdout"
         }
@@ -1810,7 +1810,7 @@
       "source": [
         "starspace_embeddings = {}\n",
         "######### YOUR CODE HERE #############\n",
-        "for line in open('./sodd.tsv'):\n",
+        "for line in open('./mdl.tsv'):\n",
         "    word,*vec = line.strip().split()\n",
         "    vf = []\n",
         "    for v in vec:\n",
@@ -1847,24 +1847,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 119
         },
-        "outputId": "a0ecedcc-62af-4fb4-83a4-9b19b9e065c5"
+        "outputId": "8787d13c-9a3a-4882-b5b2-e9c1b52e623f"
       },
       "source": [
         "for k in [1, 5, 10, 100, 500, 1000]:\n",
         "    print(\"DCG@%4d: %.3f | Hits@%4d: %.3f\" % (k, dcg_score(ss_prepared_ranking, k), \n",
         "                                               k, hits_count(ss_prepared_ranking, k)))"
       ],
-      "execution_count": 58,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "DCG@   1: 0.514 | Hits@   1: 0.514\n",
-            "DCG@   5: 0.612 | Hits@   5: 0.695\n",
-            "DCG@  10: 0.631 | Hits@  10: 0.755\n",
-            "DCG@ 100: 0.663 | Hits@ 100: 0.905\n",
-            "DCG@ 500: 0.672 | Hits@ 500: 0.980\n",
-            "DCG@1000: 0.674 | Hits@1000: 1.000\n"
+            "DCG@   1: 0.519 | Hits@   1: 0.519\n",
+            "DCG@   5: 0.616 | Hits@   5: 0.699\n",
+            "DCG@  10: 0.634 | Hits@  10: 0.756\n",
+            "DCG@ 100: 0.665 | Hits@ 100: 0.905\n",
+            "DCG@ 500: 0.675 | Hits@ 500: 0.980\n",
+            "DCG@1000: 0.677 | Hits@1000: 1.000\n"
           ],
           "name": "stdout"
         }
@@ -1899,7 +1899,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "2f684c16-7751-4d0e-88a7-9c24cb8247d0"
+        "outputId": "ccacf37f-e31f-46f4-8e18-d2fceaf86ba0"
       },
       "source": [
         "starspace_ranks_results = []\n",
@@ -1912,12 +1912,12 @@
         "    \n",
         "grader.submit_tag('StarSpaceRanks', matrix_to_string(starspace_ranks_results))"
       ],
-      "execution_count": 60,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Current answer for task StarSpaceRanks is: 38\t28\t17\t69\t24\t73\t75\t82\t81\t63\t15\t32\t14\t45\t59\t70\t4\t83\t42\t53\t78\t41\t16\t88\t98\t31\t71\t87\t57\t2\t23\t91\t79\t51\t...\n"
+            "Current answer for task StarSpaceRanks is: 91\t62\t94\t32\t5\t90\t92\t29\t10\t39\t27\t57\t40\t11\t84\t96\t14\t82\t54\t98\t37\t83\t72\t97\t89\t36\t60\t99\t61\t3\t49\t78\t12\t77\t...\n"
           ],
           "name": "stdout"
         }
